--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 			href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
 			rel="stylesheet"
 		/>
-		<link rel="stylesheet" href="" />
+		<link rel="icon" href="assets/images/favicon.png" type="image/png" />
+		<link rel="stylesheet" href="dist/index.css" />
 		<title>LiveStreaming</title>
 	</head>
 	<body></body>
