--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 							aria-label="header navigation links"
 						>
 							<li class="list__item" aria-label="first link">
-								<a href="#" class="list__item-link">about us</a>
+								<a href="#" class="list__item-link">about</a>
 							</li>
 							<li class="list__item" aria-label="second link">
 								<a href="#" class="list__item-link">contact</a>
@@ -51,5 +51,39 @@
 				</nav>
 			</div>
 		</header>
+
+		<main class="main" aria-label="main content">
+			<section class="hero-section" aria-label="hero section">
+				<div class="container">
+					<div class="hero">
+						<div class="hero__content">
+							<h1 class="hero__title">WHEN PERFORMANCE MATTERS</h1>
+							<button class="hero__action-btn">
+								Start development with us!
+							</button>
+						</div>
+						<div class="hero__notify">
+							<img
+								class="hero__notify-img"
+								src="assets/images/favicon.png"
+								alt="pigeon image"
+							/>
+
+							<p class="hero__notify-content">
+								WE USE COOKIES TO ENSURE YOUR BEST EXPERIENCE. THROUGH YOUR
+								CONTINUED USE OF THIS SITE YOU ACCEPT THIS USE. FOR MORE
+								INFORMATION, PLEASE SEE OUR PRIVACY POLICY.
+							</p>
+
+							<button class="hero__notify-btn">ACCEPT</button>
+						</div>
+
+						<div class="hero__scroll">
+							<span class="hero__scroll-content"> Scroll down </span>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
 	</body>
 </html>
