work section implementation

--- a/index.html
+++ b/index.html
@@ -84,6 +84,115 @@
 					</div>
 				</div>
 			</section>
+
+			<section class="work-section">
+				<div class="container">
+					<div class="work">
+						<h2 class="work__title">How we work?</h2>
+						<div class="work__cards-wrapper">
+							<!-- 1 icon Analysis -->
+							<figure
+								class="info-card card--analysis"
+								aria-label="card analysis"
+							>
+								<svg class="info-card__icon icon--bulb" aria-label="bulb image">
+									<use href="./assets/sprites.svg#bulb-icon"></use>
+								</svg>
+
+								<h3 class="info-card__title">Analysis</h3>
+								<p class="info-card__description">
+									Gathering client's ideas we are happy to help with a technical
+									vision.
+								</p>
+							</figure>
+							<!-- 2 icon Design -->
+							<figure class="info-card card--design" aria-label="design card">
+								<svg
+									class="info-card__icon icon--design"
+									aria-label="design image"
+								>
+									<use href="./assets/sprites.svg#design-icon"></use>
+								</svg>
+
+								<h3 class="info-card__title">Design</h3>
+								<p class="info-card__description">
+									In-depth analysis makes our solutions flexible, scalable and
+									robust.
+								</p>
+							</figure>
+
+							<!-- 3 icon Development-->
+							<figure
+								class="info-card card--development"
+								aria-label="development card"
+							>
+								<svg
+									class="info-card__icon icon--develop"
+									aria-label="development image"
+								>
+									<use href="./assets/sprites.svg#develop-icon"></use>
+								</svg>
+
+								<h3 class="info-card__title">Development</h3>
+								<p class="info-card__description">
+									Using best practices to make reliable, well-documented and
+									easy to maintain system.
+								</p>
+							</figure>
+							<!-- 4 icon Maintenance-->
+							<figure
+								class="info-card card--maintenance"
+								aria-label="maintenance card"
+							>
+								<svg
+									class="info-card__icon icon--develop"
+									aria-label="maintenance image"
+								>
+									<use href="./assets/sprites.svg#maintanance-icon"></use>
+								</svg>
+
+								<h3 class="info-card__title">Maintenance</h3>
+								<p class="info-card__description">
+									Gathering client's ideas we are happy to help with a technical
+									vision.
+								</p>
+							</figure>
+							<!-- 5 icon Testing-->
+							<figure class="info-card card--testing" aria-label="testing card">
+								<svg
+									class="info-card__icon icon--test"
+									aria-label="testing image"
+								>
+									<use href="./assets/sprites.svg#test-icon"></use>
+								</svg>
+								<h3 class="info-card__title">Testing</h3>
+								<p class="info-card__description">
+									Providing best quality of things developed by us for
+									customers.
+								</p>
+							</figure>
+							<!-- 6 icon Integration-->
+							<figure
+								class="info-card card--integration"
+								aria-label="integration card"
+							>
+								<svg
+									class="info-card__icon icon--integrate"
+									aria-label="integration image"
+								>
+									<use href="./assets/sprites.svg#integration-icon"></use>
+								</svg>
+
+								<h3 class="info-card__title">Integration</h3>
+								<p class="info-card__description">
+									Solutions that go with the times to improve businesses and
+									give customers best experience.
+								</p>
+							</figure>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 	</body>
 </html>
