experience section implementation

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
 				</div>
 			</section>
 
-			<section class="work-section">
+			<section class="work-section" aria-label="work section">
 				<div class="container">
-					<div class="work">
+					<div class="work" aria-label="work section wrapper">
 						<h2 class="work__title">How we work?</h2>
 						<div class="work__cards-wrapper">
 							<!-- 1 icon Analysis -->
@@ -196,9 +196,9 @@
 
 			<hr class="divider" />
 
-			<section class="about-section">
+			<section class="about-section" aria-label="about section">
 				<div class="container">
-					<div class="about">
+					<div class="about" aria-label="about section wrapper">
 						<div class="about__quality">
 							<h3 class="about__quality-title">High Quality</h3>
 							<p class="about__quality-desc">
@@ -224,6 +224,62 @@
 								approach to every client.<br />This method lets us to get
 								success in problems of all levels.
 							</p>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<hr class="divider" />
+
+			<section class="experience section" aria-label="experience section">
+				<div class="container">
+					<div class="experience" aria-label="experience section wrapper">
+						<h2 class="experience__title">Our experience</h2>
+						<div class="experience__offers">
+							<figure class="experience__offers-card card">
+								<h3 class="card__title">Serverless Live Streaming</h3>
+								<img
+									class="card__image"
+									src="assets/images/first_photo.webp"
+									alt="streaming service photo"
+								/>
+								<button class="card__button button">
+									<svg class="button__arrow-icon" aria-label="arrow icon">
+										<use href="./assets/sprites.svg#arrow-icon"></use>
+									</svg>
+								</button>
+							</figure>
+
+							<figure class="experience__offers-card card">
+								<h3 class="card__title">
+									<span>Learn about CloudFlex</span>
+									<span>team cases</span>
+								</h3>
+								<img
+									class="card__image"
+									src="assets/images/second_photo.webp"
+									alt="streaming service photo"
+								/>
+								<button class="card__button">
+									<svg class="button__arrow-icon" aria-label="arrow icon">
+										<use href="./assets/sprites.svg#arrow-icon"></use>
+									</svg>
+								</button>
+							</figure>
+
+							<figure class="experience__offers-card card">
+								<h3 class="card__title">Live streaming from mobile</h3>
+								<img
+									class="card__image"
+									src="assets/images/third_photo.webp"
+									alt="streaming service photo"
+								/>
+								<button class="card__button">
+									<svg class="button__arrow-icon" aria-label="arrow icon">
+										<use href="./assets/sprites.svg#arrow-icon"></use>
+									</svg>
+								</button>
+							</figure>
 						</div>
 					</div>
 				</div>
