--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Make the arrow look normal in experience section -->
+<!-- BAKCGROUND TESTIMONIALS	 -->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -231,7 +233,7 @@
 
 			<hr class="divider" />
 
-			<section class="experience section" aria-label="experience section">
+			<section class="experience-section" aria-label="experience section">
 				<div class="container">
 					<div class="experience" aria-label="experience section wrapper">
 						<h2 class="experience__title">Our experience</h2>
@@ -280,6 +282,64 @@
 									</svg>
 								</button>
 							</figure>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="testimonials-section" aria-label="testimonials section">
+				<div class="container">
+					<div class="testimonials" aria-label="testimonials wrapper">
+						<h2 class="testimonials__title" aria-label="testimonials title">
+							Testimonials
+						</h2>
+						<div class="testimonials__slider slider">
+							<figure
+								class="wave-card"
+								style="
+									background: url(./assets/wave-card_bg.svg) center/cover
+										no-repeat;
+								"
+								aria-label="Testimonials card"
+							>
+								<img
+									class="wave-card__avatar"
+									src="assets/images/joseph-gonzalez-iFgRcqHznqg-unsplash-1.webp"
+									alt="avatar of bro"
+									aria-label="Testiomonials avatar"
+								/>
+
+								<blockquote
+									class="wave-card__quote"
+									cite="https://happyclient.com "
+								>
+									Очень хороший отзыв, который оставил довольный клиент. А тут я
+									ещё не придумал что написать, поэтому просто добавил это
+									предложение.
+								</blockquote>
+							</figure>
+							<div class="slider__left-btn">
+								<svg class="slider__left-btn-icon" aria-label="left arrow icon">
+									<use href="./assets/sprites.svg#left-btn"></use>
+								</svg>
+							</div>
+							<div class="slider__right-btn">
+								<svg
+									class="slider__right-btn-icon"
+									aria-label="right arrow icon"
+								>
+									<use href="./assets/sprites.svg#right-btn"></use>
+								</svg>
+							</div>
+
+							<div class="slider__points">
+								<div class="slider__points-item"></div>
+								<div class="slider__points-item"></div>
+								<div class="slider__points-item"></div>
+								<div class="slider__points-item"></div>
+								<div class="slider__points-item"></div>
+								<div class="slider__points-item"></div>
+							</div>
 						</div>
 					</div>
 				</div>
