--- a/index.html
+++ b/index.html
@@ -344,6 +344,58 @@
 					</div>
 				</div>
 			</section>
+
+			<section class="form-section" aria-label="form section">
+				<div class="container">
+					<div class="form-section__wrapper">
+						<form
+							action="mailto:streaming_company@gmail.com"
+							class="form"
+							aria-labelledby="form-title"
+						>
+							<label for="input-name" class="form__title" id="form-title"
+								>Ready to get started? Drop us a line!</label
+							>
+
+							<input
+								id="input-name"
+								type="text"
+								placeholder="Name"
+								aria-required="true"
+								class="form__name"
+								name="firstName"
+								autocomplete="name"
+								required
+							/>
+
+							<input
+								id="input-email"
+								type="email"
+								placeholder="Email"
+								class="form__email"
+								name="email"
+								aria-required="true"
+								autocomplete="email"
+								required
+							/>
+
+							<input
+								id="input-text"
+								type="text"
+								placeholder="What we can do for you?"
+								aria-required="true"
+								class="form__text"
+								name="question"
+								required
+							/>
+
+							<button class="form__submit-btn" type="submit">Send</button>
+						</form>
+					</div>
+					<div class="form-section__bg-cloud cloud--left"></div>
+					<div class="form-section__bg-cloud cloud--right"></div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer"></footer>
 	</body>
