--- a/index.html
+++ b/index.html
@@ -397,6 +397,49 @@
 				</div>
 			</section>
 		</main>
-		<footer class="footer"></footer>
+		<footer class="contacts-section" aria-label="contacts section">
+			<div class="container">
+				<div class="footer">
+					<div class="footer__text">
+						<div class="text__links">
+							<a href="#" class="text__links-terms">Terms of Use</a>
+							<a href="#" class="text__links-privacy">Privacy Policy</a>
+						</div>
+						<div class="text__rights">
+							© CloudFlex 2024. All Rights Reserved.
+						</div>
+					</div>
+					<address class="footer__socials">
+						<a
+							class="footer__socials-link"
+							href="https://ua.linkedin.com/"
+							target="_blank"
+						>
+							<svg class="socials__icon" aria-label="linkedin icon">
+								<use href="./assets/sprites.svg#linkedin-icon"></use>
+							</svg>
+						</a>	
+						<a
+							class="footer__socials-link"
+							href="https://uk-ua.facebook.com/"
+							target="_blank"
+						>
+							<svg class="socials__icon" aria-label="facebook icon">
+								<use href="./assets/sprites.svg#facebook-icon"></use>
+							</svg>
+						</a>
+						<a
+							class="footer__socials-link"
+							href="https://www.instagram.com/"
+							target="_blank"
+						>
+							<svg class="socials__icon" aria-label="instagram icon">
+								<use href="./assets/sprites.svg#instagram-icon"></use>
+							</svg>
+						</a>
+					</address>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
