Mob menu implementation

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- Make the arrow look normal in experience section -->
-<!-- BAKCGROUND TESTIMONIALS	 -->
+<!-- NO SVG BURGER ICON -->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -54,6 +54,49 @@
 			</div>
 		</header>
 
+		<div class="mobile-navigation">
+			<label for="checkboxID" class="mobile-navigation__burger">
+				<svg class="mobile-navigation-icon" aria-label="burger icon">
+					<use href="./assets/sprites.svg#burger-icon"></use>
+				</svg>
+			</label>
+
+			<input
+				type="checkbox"
+				id="checkboxID"
+				class="mobile-navigation__toggler"
+			/>
+
+			<nav class="mobile-navigation__menu nav">
+				<ul class="nav__list">
+					<li class="nav__list-item">
+						<a class="nav__list-item-link" href="#work">How we work?</a>
+					</li>
+					<li class="nav__list-item">
+						<a class="nav__list-item-link" href="#about">About us</a>
+					</li>
+					<li class="nav__list-item">
+						<a class="nav__list-item-link" href="#experience">Our experience</a>
+					</li>
+					<li class="nav__list-item">
+						<a class="nav__list-item-link" href="#testimonials">Testimonials</a>
+					</li>
+					<li class="nav__list-item">
+						<a class="nav__list-item-link" href="#formSection">Form</a>
+					</li>
+					<li class="nav__list-item">
+						<a class="nav__list-item-link" href="#contacts">Contacts</a>
+					</li>
+				</ul>
+
+				<label for="checkboxID" class="nav__close">
+					<svg class="nav__close-icon" aria-label="close icon">
+						<use href="./assets/sprites.svg#cross-icon"></use>
+					</svg>
+				</label>
+			</nav>
+		</div>
+
 		<main class="main" aria-label="main content">
 			<section class="hero-section" aria-label="hero section">
 				<div class="container">
@@ -87,7 +130,7 @@
 				</div>
 			</section>
 
-			<section class="work-section" aria-label="work section">
+			<section class="work-section" id="work" aria-label="work section">
 				<div class="container">
 					<div class="work" aria-label="work section wrapper">
 						<h2 class="work__title">How we work?</h2>
@@ -198,7 +241,7 @@
 
 			<hr class="divider" />
 
-			<section class="about-section" aria-label="about section">
+			<section class="about-section" id="about" aria-label="about section">
 				<div class="container">
 					<div class="about" aria-label="about section wrapper">
 						<div class="about__quality">
@@ -233,7 +276,11 @@
 
 			<hr class="divider" />
 
-			<section class="experience-section" aria-label="experience section">
+			<section
+				class="experience-section"
+				id="experience"
+				aria-label="experience section"
+			>
 				<div class="container">
 					<div class="experience" aria-label="experience section wrapper">
 						<h2 class="experience__title">Our experience</h2>
@@ -287,7 +334,11 @@
 				</div>
 			</section>
 
-			<section class="testimonials-section" aria-label="testimonials section">
+			<section
+				class="testimonials-section"
+				id="testimonials"
+				aria-label="testimonials section"
+			>
 				<div class="container">
 					<div class="testimonials" aria-label="testimonials wrapper">
 						<h2 class="testimonials__title" aria-label="testimonials title">
@@ -345,7 +396,7 @@
 				</div>
 			</section>
 
-			<section class="form-section" aria-label="form section">
+			<section class="form-section" id="formSection" aria-label="form section">
 				<div class="container">
 					<div class="form-section__wrapper">
 						<form
@@ -397,7 +448,11 @@
 				</div>
 			</section>
 		</main>
-		<footer class="contacts-section" aria-label="contacts section">
+		<footer
+			class="contacts-section"
+			aria-label="contacts section"
+			id="contacts"
+		>
 			<div class="container">
 				<div class="footer">
 					<div class="footer__text">
@@ -418,7 +473,7 @@
 							<svg class="socials__icon" aria-label="linkedin icon">
 								<use href="./assets/sprites.svg#linkedin-icon"></use>
 							</svg>
-						</a>	
+						</a>
 						<a
 							class="footer__socials-link"
 							href="https://uk-ua.facebook.com/"
